Login page simplification bugfixes. CanExecute bugs removed.

--- a/RecipeCosts/RecipeCosts/RecipeCosts/Views/LoginPage.xaml
+++ b/RecipeCosts/RecipeCosts/RecipeCosts/Views/LoginPage.xaml
@@ -38,7 +38,7 @@
                 <Button 
                     VerticalOptions="Center" 
                     Text="{Binding LoginButtonText}" 
-                    Command="{Binding RegisterCommand}"/>
+                    Command="{Binding LoginCommand}"/>
                 <Button
                     VerticalOptions="Center"
                     Text="{Binding SwitchLayoutButtonText}"
