Added key classes for storage identifiers.

--- a/RecipeCosts/RecipeCosts/RecipeCosts/Views/SettingsPage.xaml
+++ b/RecipeCosts/RecipeCosts/RecipeCosts/Views/SettingsPage.xaml
@@ -25,7 +25,7 @@
                 <Label
                     Text="Logged in as:"/>
                 <Entry
-                    Text="{Binding UserId, Mode=OneWay, UpdateSourceEventName=PropertyChanged}"
+                    Text="{Binding UserName, Mode=OneWay, UpdateSourceEventName=PropertyChanged}"
                     IsReadOnly="True"/>
             </StackLayout>
             <Button
