Updated NuGet packages. Installed Xamarin Toolkit package. Implemented delete function for Ingredients.

--- a/RecipeCosts/RecipeCosts/RecipeCosts/Views/IngredientsPage.xaml
+++ b/RecipeCosts/RecipeCosts/RecipeCosts/Views/IngredientsPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
              xmlns:vm="clr-namespace:RecipeCosts.ViewModels"
              x:Class="RecipeCosts.Views.IngredientsPage">
 
@@ -19,16 +20,22 @@
                 SelectedItem="{Binding SelectedIngredient}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid
+                            >
                             <Label
-                                Text="{Binding Name}"/>
-                            <Grid.GestureRecognizers>
+                                Text="{Binding Name}"
+                                xct:TouchEffect.LongPressCommand="{Binding Source={RelativeSource AncestorType={x:Type vm:IngredientsViewModel}}, Path=IngredientLongPressCommand}"
+                                xct:TouchEffect.LongPressCommandParameter="{Binding .}"
+                                xct:TouchEffect.LongPressDuration="500"
+                                xct:TouchEffect.Command="{Binding Source={RelativeSource AncestorType={x:Type vm:IngredientsViewModel}}, Path=IngredientTappedCommand}"
+                                xct:TouchEffect.CommandParameter="{Binding .}"/>
+                            <!--<Grid.GestureRecognizers>
                                 <TapGestureRecognizer 
                                     NumberOfTapsRequired="1"
                                     Command="{Binding Source={RelativeSource AncestorType={x:Type vm:IngredientsViewModel}}, Path=IngredientTapped}"		
                                     CommandParameter="{Binding .}">
                                 </TapGestureRecognizer>
-                            </Grid.GestureRecognizers>
+                            </Grid.GestureRecognizers>-->
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
