--- a/RecipeCosts/RecipeCosts/RecipeCosts/Views/IngredientsPage.xaml
+++ b/RecipeCosts/RecipeCosts/RecipeCosts/Views/IngredientsPage.xaml
@@ -20,8 +20,7 @@
                 SelectedItem="{Binding SelectedIngredient}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid
-                            >
+                        <Grid>
                             <Label
                                 Text="{Binding Name}"
                                 xct:TouchEffect.LongPressCommand="{Binding Source={RelativeSource AncestorType={x:Type vm:IngredientsViewModel}}, Path=IngredientLongPressCommand}"
@@ -29,13 +28,6 @@
                                 xct:TouchEffect.LongPressDuration="500"
                                 xct:TouchEffect.Command="{Binding Source={RelativeSource AncestorType={x:Type vm:IngredientsViewModel}}, Path=IngredientTappedCommand}"
                                 xct:TouchEffect.CommandParameter="{Binding .}"/>
-                            <!--<Grid.GestureRecognizers>
-                                <TapGestureRecognizer 
-                                    NumberOfTapsRequired="1"
-                                    Command="{Binding Source={RelativeSource AncestorType={x:Type vm:IngredientsViewModel}}, Path=IngredientTapped}"		
-                                    CommandParameter="{Binding .}">
-                                </TapGestureRecognizer>
-                            </Grid.GestureRecognizers>-->
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
