Populated RecipeDetailViewModel with basic logic. Added Popup skeleton to select ingredients to add.

--- a/RecipeCosts/RecipeCosts/RecipeCosts/Views/RecipeDetailsPage.xaml
+++ b/RecipeCosts/RecipeCosts/RecipeCosts/Views/RecipeDetailsPage.xaml
@@ -40,7 +40,8 @@
             <Button
                 Grid.Row="3"
                 Text="Add Ingredient"
-                HorizontalOptions="CenterAndExpand"/>
+                HorizontalOptions="CenterAndExpand"
+                Command="{Binding AddIngredientCommand}"/>
 
             <CollectionView
                 Grid.Row="4">
